<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CustoPoly</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="title_activity_game_menu">GameMenuActivity</string>
    <string name="title_activity_init">InitActivity</string>
    <string name="title_activity_pre_game">PreGameActivity</string>
    <string name="title_activity_shop">ShopActivity</string>
    <string name="title_activity_theme_selection">ThemeSelectionActivity</string>
    <string name="logoDescription">The logo of our team</string>

    //ThemeList
    <string name="themesAndSkinsXML_filepath">themesAndSkins.xml</string>

    //GameModel
    <string formatted="false" name="ingame_notWantToBuy">Player %s did not want to purchase %s</string>
    <string name="ingame_buyyesbutton">Yes</string>
    <string name="ingame_buynobutton">No</string>
    <string formatted="false" name="ingame_askWantToBuy">Do you want to buy %s for %dK?</string>
    <string formatted="false" name="ingame_buySuccess">%s owned %s.</string>
    <string formatted="false" name="ingame_buyFailure">%s have not enough money to buy the property</string>
    <string name="ingame_mortgage">mortgage</string>
    <string name="ingame_unmortgage">unmortgage</string>
    <string formatted="false" name="ingame_askMortgageMessage">Do you want to %s %s for %dK?</string>
    <string formatted="false" name="ingame_mortgage_donemsg">%s is %s for %dK.</string>
    <string formatted="false" name="ingame_mortgage_failmsg">%s cancelled</string>
    <string name="ingame_mortgageNo">No</string>
    <string name="ingame_mortgageYes">Yes</string>
    <string formatted="false" name="ingame_feepaidmsg">%s paid : %dK</string>
    <string formatted="false" name="ingame_rentpaidmsg">%s paid %dK to %s</string>
    <string name="ingame_quitgame_title">Quit game?</string>
    <string name="ingame_quitgame_message">Are you sure you want to quit the game?</string>
    <string name="ingame_mortagege_title">Mortgage property?</string>
    <string name="ingame_mortagege_message">Are you sure you want to Mortgage/UnMortgage the property: %s?</string>

    //MainActivity
    <string name="playButtonText">Play</string>
    <string name="shopButtonText">Shop</string>
    <string name="themeButtonText">Customize</string>
    <string name="preGameTitleText">Select Players</string>

    //PreGameActivity
    <string name="playPreGameButtonText">Play</string>

    //GameMenuActivity
    <string name="gameMenuTitleText">Play Custopoly</string>
    <string name="newGameButtonText">New Game</string>
    <string name="loadGameButtonText">Load Game</string>

    //SaveGameHandler
    <string name="generic_game_name">GameFile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="inputNameText">Enter a name</string>
    <string name="exceptions_playernotfound">There is no player with that name or id.</string>

    <string name="title_activity_properties_view">PropertiesViewActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_property_view">PropertyViewActivity</string>


    //ShopActivity
    <string name="shop_wanttobuy_message">Do you want to buy this theme?</string>
    <string name="shop_wanttobuy_title">Buy a theme</string>
    <string name="shop_yes">YES</string>
    <string name="shop_no">NO</string>
    <string name="shop_notenoughfunds_message">You don\'t have enough i$$ to purchase this theme.</string>
    <string name="shop_notenoughfunds_title">Not enough money!</string>
    <string name="title_activity_shop_temp">ShopTempActivity</string>
    <string formatted="false" name="shop_themebought_message">You bought the %s theme.</string>
    <string name="shop_themebought_title">Congratulations!</string>
    <string name="buythemebutton">BUY THEME!</string>

</resources>
