<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".MainActivity" android:background="@android:color/holo_blue_dark">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/app_name"
            android:id="@+id/mainActivityTitle" android:layout_alignParentTop="true" android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" android:gravity="center" android:textStyle="bold"
            android:textSize="200px"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/themeButtonText"
            android:id="@+id/themeButton"
            android:layout_marginTop="60dp"
            android:layout_marginLeft="32dp" android:layout_marginStart="32dp"
            android:elegantTextHeight="false" android:layout_below="@+id/mainActivityTitle"
            android:layout_alignParentLeft="true" android:layout_alignParentStart="true"
            android:layout_alignLeft="@+id/playButton" android:enabled="false"
            android:clickable="true" android:height="60dp" android:width="150dp"/>
    <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/playButtonText"
            android:id="@+id/playButton"
            android:clickable="true"
            android:width="150dp" android:height="60dp"
            android:layout_alignTop="@+id/themeButton" android:layout_centerHorizontal="true"/>
    <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/shopButtonText"
            android:id="@+id/shopButton"
            android:layout_marginRight="28dp"
            android:layout_marginEnd="28dp" android:enabled="false" android:clickable="true" android:height="60dp"
            android:width="150dp" android:layout_alignTop="@+id/playButton"
            android:layout_alignRight="@+id/mainActivityTitle" android:layout_alignEnd="@+id/mainActivityTitle"/>
</RelativeLayout>
